css/login.css
.full-page {
  display              : grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows   : 1fr;
  padding-top          : 90px;
  width                : 100%;
  height               : 100%;
  overflow: hidden;
  overflow-y: auto;

  


  grid-template-areas  :
    " content header";
}



.login-Space {
  display: flex;
  align-content: flex-start;
  align-items: flex-start;
}

.header {
  display            : flex !important;
  flex-direction     : column;
  background-image   : url(../img/featured-img-9.png);
  background-size    : cover;
  background-position: center;
  background-repeat  : no-repeat;
  height             : 100%;
  width              : 100%;
  display            : flex;
  justify-content    : flex-start;
  align-items        : center;
  padding            : clamp(20px, 7.5vw, 50vw);
  grid-area          : header;
  gap                : 34px;
}

.overline .material-symbols-outlined {

  display: flex;

  background-color: rgba(255, 255, 255, 0);
  color           : var(--f7-theme-color);
  align-items     : center;
  justify-content : center;
}

.overline {
  font-size      : clamp(.95rem, 1.3vw, 2rem);
  line-height    : 140%;
  font-weight    : 600;
  display        : flex;
  flex-direction : column;
  width          : 100%;
  height         : 80px;
  justify-content: flex-start;
  color          : #5f50b2;
  font-family    : "mulish", sans-serif;

}

.full-page .content {
  display        : flex;
  width          : 100%;
  height: 100%;
  justify-content: center;
  align-items    : flex-start;
  grid-area      : content;
  padding        : clamp(20px, 7.5vw, 50vw);
  box-sizing     : border-box;

  overflow: hidden;
  overflow: overlay;
  overflow-y: scroll;
}



.form-container {
  display         : flex;
  flex-direction  : column;
  align-items     : center;
  justify-content : center;
  height          : auto;
  width           : 100%;
  margin          : 0px;
  /* border-radius: calc((32px) + (0.5vw)); */
  width           : clamp(500px, 30vw, 600px);
}

.form-container .v-button-filled {

  box-shadow: 0 3px 6px #5f50b28c;

  box-shadow: rgba(95, 80, 178, 0.549) 0px 1px 2px 0px, rgba(95, 80, 178, 0.15) 0px 3px 3px 1px;
}

.form {
  display       : flex;
  flex-direction: column;
  width         : 100%;
  padding       : 2rem;

  background-image: linear-gradient(white, rgba(255, 255, 255, 0)), linear-gradient(to top, #ffffff00, #c6adfb1d);
}

.form-title {

  display: flex;

  flex-direction: row;

  font-size: clamp(1.3rem, 2.4vw, 1.7rem) !important;

  line-height: clamp(1.9rem, 2.5vw, 8rem) !important;

  width: 100%;

  font-family: "mulish", sans-serif !important;

  font-weight: 900 !important;

  background-color: var(--v-header-light-mint);
 

  border-bottom: solid 1px #3caa8b41;

  border-top-left-radius: calc((32px) + (0.5vw));

  border-top-right-radius: calc((32px) + (0.5vw));

  overflow: hidden;

  padding: 2rem;

  padding-bottom: 1.5rem;

  align-items: center;

  justify-content: space-between;
}

.full-page .title {
  display        : flex;
  width          : 100%;
  justify-content: flex-start;
  align-content  : flex-start;
}

.full-page h1 {
  display    : flex;
  font-size  : clamp(2rem, 3vw, 5rem);
  line-height: clamp(2rem, 3.8vw, 4rem);
  white-space: pre-wrap !important;
  width      : fit-content;
}

.form .v-button-filled {
  width    : 100% !important;
  max-width: calc(100%) !important;
}

.label {
  display      : none;
  margin-bottom: 0.5rem;

  font-size  : 13px !important;
  font-family: "mulish";
  font-weight: 700;
  opacity    : 0.9;

}

.input {
  border       : 1.5px solid #dad6f5;
  border-radius: 8px;
  font-size    : 1rem;
  padding      : 0.8rem;
  width        : 100%;
  margin-bottom: 1rem;
  font-family  : "mulish";
  font-weight  : 700;
  opacity      : 0.9;
}

.input:focus-visible {
  outline         : none;
  border          : 1px solid var(--f7-2ndry-theme-color-shade);
  background-color: white;
}

.input::placeholder {
  color      : var(--f7-theme-color-tint) !important;
  font-weight: 500;
  opacity    : 0.6;
}

.checkbox-container {
  display      : none;
  align-items  : center;
  margin-bottom: 1rem;
}

.checkbox {
  display: flex;
}

.checkbox-label {
  display    : flex;
  white-space: nowrap;
  align-items: center;
  width      : 100%;
}

.checkbox-label .link {
  margin-left: 0px;
}

.checkbox-custom {
  display      : inline-block;
  width        : 22px;
  height       : 22px;
  border       : 1px solid #dad6f5;
  border-radius: 5px;
  margin-right : 0.5rem;
  position     : relative;
  padding      : 4px !;
}

.checkbox-custom::after {
  content         : "";
  position        : absolute;
  top             : 50%;
  left            : 50%;
  transform       : translate(-50%, -50%) scale(0);
  width           : 0.7rem;
  height          : 0.7rem;
  border-radius   : 10%;
  background-color: var(--f7-2ndry-theme-color-shade);
  transition      : transform 0.1s ease-in-out;
}

.checkbox:checked+.checkbox-custom::after {
  transform: translate(-50%, -50%) scale(1);
}

.full-page .link {
  color          : var(--f7-2ndry-theme-color-shade);
  text-decoration: none;
}

/* media query */

/* desktop styles */

/* Styles for desktop min width */

@media (min-width: 1550px) {

  .full-page .content,
  .header {
    padding-top: clamp(1em, 9vw, 50vh) !important;
  }

  .full-page .title {
    margin-top: 20px;
  }


}




/* styles for tablet devices */
@media (min-width: 580px) and (max-width: 1055px) {

  .overline {

    height: 66px;
  }

  .full-page {
    display       : flex;
    padding-top   : 0px;
    flex-direction: column !important;
    width         : 100%;
  }

  .full-page .content {
    align-items: flex-start !important;
  }



  .surface-view {
    display        : flex;
    align-items    : center;
    justify-content: flex-start;
    width          : 100%;
    transition     : opacity 0.5s ease-in-out;

  }

  .full-page .header {
    padding-top: 160px !important;
    padding    : clamp(30px, 11vw, 68px);
    height     : auto;
    grid-gap   : 30px;
  }

  .full-page h1 {
    display    : flex;
    font-size  : clamp(2.1rem, 4vw, 5rem);
    line-height: clamp(2.5rem, 4.7vw, 10rem);
    white-space: pre-wrap !important;
    width      : fit-content;
  }


  .form-container {
    display         : flex;
    flex-direction  : column;
    align-items     : center;
    justify-content : flex-start;
    width           : 100%;
    margin          : 0px;
    /* border-radius: calc((32px) + (0.5vw)); */
    width           : 100%;
  }




}

/* styles for mobile devices */
@media (min-width: 370px) and (max-width: 579px) {

  .overline {
    height: 60px;
    gap   : 2px;
  }

  .full-page {
    display       : flex;
    flex-direction: column;
    padding-top   : 0px;
    justify-content: flex-start;
  }

  .full-page .header {
    padding      : 2rem;
    padding-left : 2rem;
    padding-right: 2rem;
    padding-top  : 120px;
    height       : auto;

    gap: 20px;
  }


  .full-page .content {
    align-items: flex-start;
    padding    : 2rem !important;
  }

  .full-page h1 {
    display    : flex;
    font-size  : clamp(1.5rem, 5.8vw, 4rem);
    line-height: clamp(1.8rem, 6.4vw, 10rem);
    white-space: pre-wrap !important;
    width      : fit-content;
  }

  .form .checkbox-label {
    font-size  : clamp(0.5rem, 3.5vw, 1rem);
    line-height: clamp(1.9rem, 2.5vw, 8rem);
  }

  .form-container {

    width: 100%;

  }

  .form {
    width: 100%;
  }
}

/* styles for smallmobile devices */
@media (min-width: 200px) and (max-width: 369px) {

  .overline {
    height: 60px;
    gap   : 2px;
  }

  .full-page {
    display       : flex;
    flex-direction: column !important;
    width         : 100%;
    padding-top   : 0px;
    justify-content: flex-start;
  }

  .full-page .header {
    padding      : 2rem;
    padding-left : 2rem;
    padding-right: 2rem;
    padding-top  : 110px;
    height       : fit-content;

    grid-gap: 18px;
  }

  .overline {
    font-size: clamp(0.8rem, 0.6vw, 3rem);
    grid-gap : 3px;
  }

  .form-title {
    font-size  : clamp(1.1rem, 6.3vw, 2.3rem) !important;
    line-height: clamp(1.9rem, 2.5vw, 8rem) !important;
  }

  .full-page .content {
    align-items: flex-start;
    padding    : 1rem !important;
  }

  .full-page h1 {
    display    : flex;
    font-size  : clamp(1rem, 7.2vw, 4rem);
    line-height: clamp(1.4rem, 8vw, 10rem);
    white-space: pre-wrap !important;
    width      : fit-content;
  }

  .form .checkbox-label {
    font-size  : clamp(0.4rem, 4.3vw, 1rem);
    line-height: clamp(1.9rem, 2.5vw, 8rem);
  }

  .form-container {


    width        : 100%;
    border-radius: clamp(1rem, 5vw, 3rem) !important;
  }

  .form {
    min-width  : 100% !important;
    width      : clamp(10vw, 60vw, 400px) !important;
    font-family: "poppins" !important;
  }

  .form .label {
    font-size  : clamp(0.5rem, 5.5vw, 1rem);
    line-height: clamp(1.9rem, 2.5vw, 8rem);
  }

  .form .input {
    font-size  : clamp(0.5rem, 5.5vw, 1rem);
    line-height: clamp(1.9rem, 2.5vw, 8rem);
    padding    : 8px 14px;
  }

  .v-button-outlined {
    padding: 5vw !important;
  }
}

/* styles for smallallestmobile devices */
@media (min-width: 1px) and (max-width: 260px) {
  .footer-Contents {
    display: none !important;
  }

  .v-splash-min-dlplay-size {
    display: flex;
  }

  .v-splash-min-dlplay-size .v-logo-wrapper h4 {
    font-size  : 0.8rem !important;
    line-height: 100% !important;
  }
}


/* actions */

.login-Space.fade-in {

  transform: translateY(5%);
  opacity  : -50;
  transition: transform 0.5s cubic-bezier(0.3, 0.6, 0.13, 1),
    opacity 0.5s cubic-bezier(0.3, 0.6, 0.13, 1);
}

.login-Space.fade-in.active {
  opacity  : 1;
  transform: translateY(0);
}


/* onboarding*/

.onboarding-Space.fade-in {
  transform: translateY(5%);
  opacity  : 0;
  transition: transform 0.5s cubic-bezier(0.3, 0.6, 0.13, 1),
    opacity 0.5s cubic-bezier(0.3, 0.6, 0.13, 1);
}

.onboarding-Space.fade-in.active {
  opacity  : 1;
  transform: translateY(0);
}

.translate-up {
  animation: translate-up 0.3s cubic-bezier(0.3, 0.6, 0.13, 1);
}

@keyframes translate-up {
  from {
    transform: translateY(50%);
    opacity  : 0;
  }

  to {
    transform: translateY(0);
    opacity  : 1;
  }
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

